--- a/gulp-cli/style/shoplist.scss
+++ b/gulp-cli/style/shoplist.scss
@@ -2,6 +2,7 @@
 @import './header.scss';
 @import './topic_type.scss';
 @import './foot.scss';
+@import './login_box.scss';
 body{
     overflow: auto;
    }
