--- a/gulp-cli/views/detail.html
+++ b/gulp-cli/views/detail.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>商品详情</title>
     <link rel="stylesheet" href="./style/clear.css">
-    <link rel="stylesheet" href="./style/shoplist.css">
+    <link rel="stylesheet" href="./style/detail.css">
 </head>
 <body>
 <div id="wrap_all">
@@ -20,7 +20,7 @@
               </ul>
             </div>
             <div class="right">
-              <p>您还未登录，请<span>登录</span></p>
+              <p>您还未登录，请<span class="log">登录</span></p>
               <ul>
                 <li>我的订单</li>
                 <li>个人中心</li>
@@ -50,10 +50,10 @@
             <div class="left">
               <ul>
                 <li>
-                  <a href="">首页</a>
+                  <a href="./index.html">首页</a>
                 </li>
-                <li class="choose">
-                  <a href="">商品列表</a></li>
+                <li>
+                  <a href="./shoplist.html">商品列表</a></li>
                 <li>
                   <a href="">活动专区</a>
                 </li>
@@ -73,14 +73,14 @@
             </div>
             <div class="right">
               <p></p>
-              <div>购物车（<span>0</span>）</div>
+              <div><a href="./shoppingcar.html" style="color: #ff5900;">购物车</a>（<span>0</span>）</div>
             </div>
           </div>
           <!-- 子导航栏 -->
           <div class="top_4">
             <ul>
               <li class="no_1">
-                <a href="">全部分类</a>
+                <a href="./shoplist.html">全部分类</a>
               </li>
               <li>
                 <a href="">英雄</a>
@@ -133,7 +133,7 @@
                 </div>
                 <!-- 排行列表 -->
                 <ul class="box_type2">
-                    <li>
+                    <!-- <li>
                       <div class="listnum">01</div>
                       <img src="https://game.gtimg.cn/images/daoju/dbm/lol/20170216_28862_2202.jpg" alt="">
                       <div class="content">
@@ -147,128 +147,7 @@
                           微信价： <p>￥</p> <span>76.63</span>
                         </div>
                       </div>
-                    </li>
-                    <li>
-                        <div class="listnum">01</div>
-                        <img src="https://game.gtimg.cn/images/daoju/dbm/lol/20170216_28862_2202.jpg" alt="">
-                        <div class="content">
-                          <h3>猩红之月 烬</h3>
-                          <div class="qb">
-                            Q币价： <span>79.00</span>
-                            <p>Q币</p> 
-                          </div>
-                          <br>
-                          <div class="wx">
-                            微信价： <p>￥</p> <span>76.63</span>
-                          </div>
-                        </div>
-                    </li>
-                    <li>
-                    <div class="listnum">01</div>
-                    <img src="https://game.gtimg.cn/images/daoju/dbm/lol/20170216_28862_2202.jpg" alt="">
-                    <div class="content">
-                        <h3>猩红之月 烬</h3>
-                        <div class="qb">
-                        Q币价： <span>79.00</span>
-                        <p>Q币</p> 
-                        </div>
-                        <br>
-                        <div class="wx">
-                        微信价： <p>￥</p> <span>76.63</span>
-                        </div>
-                    </div>
-                    </li>
-                    <li>
-                    <div class="listnum">01</div>
-                    <img src="https://game.gtimg.cn/images/daoju/dbm/lol/20170216_28862_2202.jpg" alt="">
-                    <div class="content">
-                        <h3>猩红之月 烬</h3>
-                        <div class="qb">
-                        Q币价： <span>79.00</span>
-                        <p>Q币</p> 
-                        </div>
-                        <br>
-                        <div class="wx">
-                        微信价： <p>￥</p> <span>76.63</span>
-                        </div>
-                    </div>
-                    </li>
-                    <li>
-                    <div class="listnum">01</div>
-                    <img src="https://game.gtimg.cn/images/daoju/dbm/lol/20170216_28862_2202.jpg" alt="">
-                    <div class="content">
-                        <h3>猩红之月 烬</h3>
-                        <div class="qb">
-                        Q币价： <span>79.00</span>
-                        <p>Q币</p> 
-                        </div>
-                        <br>
-                        <div class="wx">
-                        微信价： <p>￥</p> <span>76.63</span>
-                        </div>
-                    </div>
-                    </li>
-                    <li>
-                    <div class="listnum">01</div>
-                    <img src="https://game.gtimg.cn/images/daoju/dbm/lol/20170216_28862_2202.jpg" alt="">
-                    <div class="content">
-                        <h3>猩红之月 烬</h3>
-                        <div class="qb">
-                        Q币价： <span>79.00</span>
-                        <p>Q币</p> 
-                        </div>
-                        <br>
-                        <div class="wx">
-                        微信价： <p>￥</p> <span>76.63</span>
-                        </div>
-                    </div>
-                    </li>
-                    <li>
-                    <div class="listnum">01</div>
-                    <img src="https://game.gtimg.cn/images/daoju/dbm/lol/20170216_28862_2202.jpg" alt="">
-                    <div class="content">
-                        <h3>猩红之月 烬</h3>
-                        <div class="qb">
-                        Q币价： <span>79.00</span>
-                        <p>Q币</p> 
-                        </div>
-                        <br>
-                        <div class="wx">
-                        微信价： <p>￥</p> <span>76.63</span>
-                        </div>
-                    </div>
-                    </li>
-                    <li>
-                    <div class="listnum">01</div>
-                    <img src="https://game.gtimg.cn/images/daoju/dbm/lol/20170216_28862_2202.jpg" alt="">
-                    <div class="content">
-                        <h3>猩红之月 烬</h3>
-                        <div class="qb">
-                        Q币价： <span>79.00</span>
-                        <p>Q币</p> 
-                        </div>
-                        <br>
-                        <div class="wx">
-                        微信价： <p>￥</p> <span>76.63</span>
-                        </div>
-                    </div>
-                    </li>
-                    <li>
-                    <div class="listnum">01</div>
-                    <img src="https://game.gtimg.cn/images/daoju/dbm/lol/20170216_28862_2202.jpg" alt="">
-                    <div class="content">
-                        <h3>猩红之月 烬</h3>
-                        <div class="qb">
-                        Q币价： <span>79.00</span>
-                        <p>Q币</p> 
-                        </div>
-                        <br>
-                        <div class="wx">
-                        微信价： <p>￥</p> <span>76.63</span>
-                        </div>
-                    </div>
-                    </li>
-
+                    </li> -->
                 </ul>
 
             </div>
@@ -279,40 +158,50 @@
                     </div>
                 </div>
                 <ul class="box_type3">
-                    <li>
+                    <!-- <li>
                         <img src="https://game.gtimg.cn/images/zb/x5/uploadImg/goods/201803/20180305092344_50011.jpg" alt="">
                         <div class="info">
                             <p>月球漫步 诺提勒斯 T恤（女款）</p>
                             <div class="price">￥120.00</div>
                         </div>
-                    </li>
-                    <li>
-                        <img src="https://game.gtimg.cn/images/zb/x5/uploadImg/goods/201803/20180305092344_50011.jpg" alt="">
-                        <div class="info">
-                            <p>月球漫步 诺提勒斯 T恤（女款）</p>
-                            <div class="price">￥120.00</div>
-                        </div>
-                    </li>
-                    <li>
-                        <img src="https://game.gtimg.cn/images/zb/x5/uploadImg/goods/201803/20180305092344_50011.jpg" alt="">
-                        <div class="info">
-                            <p>月球漫步 诺提勒斯 T恤（女款）</p>
-                            <div class="price">￥120.00</div>
-                        </div>
-                    </li>
-                    <li>
-                        <img src="https://game.gtimg.cn/images/zb/x5/uploadImg/goods/201803/20180305092344_50011.jpg" alt="">
-                        <div class="info">
-                            <p>月球漫步 诺提勒斯 T恤（女款）</p>
-                            <div class="price">￥120.00</div>
-                        </div>
-                    </li>
+                    </li> -->
                 </ul>
                 <a href="">更多></a>
             </div>
         </div>
         <div class="right">
-
+          <div class="top_con">
+            <div class="goods_img">
+              <img src="https://game.gtimg.cn/images/daoju/app/lol/big/pkg-25971.jpg?_t=1611139575" alt="">
+              <div title="查看大图"></div>
+            </div>
+            <div class="goods_box">
+              <h2>破败军团 卡尔玛 炫彩礼包</h2>
+              <div class="bg_price">
+                <div class="qb">
+                  <p>Q币价:</p><span>171.7 Q币</span>
+                </div>
+                <div class="wx">
+                  <p>微信价:</p><h3>￥171.7</h3>
+                </div>
+                
+              </div>
+              <p>期限: 永久</p>
+              <div class="buy">
+                <a href="" class="incar">加入购物车</a>
+                <a href="" class="gift">赠送</a>
+              </div>
+              </div>
+            </div>
+      
+          <div class="btm_con">
+            <div class="nav">
+              <a href="">商品详情</a>
+            </div>
+            <div class="content">
+              <p>破败军团 卡尔玛 炫彩礼包：天启者 卡尔玛+破败军团 卡尔玛+破败军团 卡尔玛 帝国征伐使+破败军团 卡尔玛 山峰征伐使+破败军团 卡尔玛 森林征伐使+破败军团 卡尔玛 虚无征伐使+破败军团 卡尔玛 海港征伐使+破败军团 卡尔玛 极地征伐使</p>
+            </div>
+          </div>
         </div>
     </div>
     <!-- 通用底部 -->
@@ -384,7 +273,8 @@
       </a>
       <a href="">反馈</a>
     </div>
-
 </div>
+<script src="./script/detail.js" type="module"></script>
+<!-- <script src="./script/log_box.js" type="module"></script> -->
 </body>
 </html>
