--- a/gulp-cli/views/index.html
+++ b/gulp-cli/views/index.html
@@ -22,7 +22,7 @@
               </ul>
             </div>
             <div class="right">
-              <p>您还未登录，请<span>登录</span></p>
+              <p>您还未登录，请<span class="log">登录</span></p>
               <ul>
                 <li>我的订单</li>
                 <li>个人中心</li>
@@ -52,10 +52,10 @@
             <div class="left">
               <ul>
                 <li class="choose">
-                  <a href="">首页</a>
+                  <a href="./index.html">首页</a>
                 </li>
                 <li>
-                  <a href="">商品列表</a></li>
+                  <a href="./shoplist.html">商品列表</a></li>
                 <li>
                   <a href="">活动专区</a>
                 </li>
@@ -75,14 +75,14 @@
             </div>
             <div class="right">
               <p></p>
-              <div>购物车（<span>0</span>）</div>
+              <div><a href="./shoppingcar.html" style="color: #ff5900;">购物车</a>（<span>0</span>）</div>
             </div>
           </div>
           <!-- 子导航栏 -->
           <div class="top_4">
             <ul>
               <li class="no_1">
-                <a href="">全部分类</a>
+                <a href="./shoplist.html">全部分类</a>
               </li>
               <li>
                 <a href="">英雄</a>
@@ -117,7 +117,7 @@
         <div class="left">
           <div class="login">
             <img src="./image/default.gif" alt="">
-            <p>您还未登录哦，<a href="">立即登录</a><br>购买超值商品！</p>
+            <p>您还未登录哦，<span>立即登录</span><br>购买超值商品！</p>
           </div>
           <div class="bind">
             <p>当前未绑定角色</p>
@@ -169,7 +169,7 @@
           </div>
           <div class="list">
             <ul>
-              <li>水晶玫瑰 幽梦玫瑰</li>
+              <li class="show">水晶玫瑰 幽梦玫瑰</li>
               <li>牛气冲天 福星高照</li>
               <li>2021福牛贺岁</li>
               <li>周边贺新春</li>
@@ -219,6 +219,78 @@
                   <span class="buy">立即购买</span>
                 </div>
               </li>
+              <li>
+                <div class="content">
+                  <p class="zj">
+                    直降
+                    <em>49.50Q币</em>
+                  </p>
+                  <a href="" class="detail">
+                    <img src="https://game.gtimg.cn/images/daoju/app/lol/medium/2-120008-.jpg?_t=1570688905" alt="">
+                  </a>
+                  <p class="name">
+                    西部魔影 赫卡里姆
+                  </p>
+                  <div class="price">
+                    <h4>49.50</h4>元<span>（
+                      <h5>99QB</h5>）
+                    </span>
+                  </div>
+                  <p class="time">
+                    剩余时间：
+                    <em>6天8时58分7秒</em>
+                  </p>
+                  <span class="buy">立即购买</span>
+                </div>
+              </li>
+              <li>
+                <div class="content">
+                  <p class="zj">
+                    直降
+                    <em>49.50Q币</em>
+                  </p>
+                  <a href="" class="detail">
+                    <img src="https://game.gtimg.cn/images/daoju/app/lol/medium/2-122016-.jpg?_t=1570688850" alt="">
+                  </a>
+                  <p class="name">
+                    西部魔影 德莱厄斯
+                  </p>
+                  <div class="price">
+                    <h4>49.50</h4>元<span>（
+                      <h5>99QB</h5>）
+                    </span>
+                  </div>
+                  <p class="time">
+                    剩余时间：
+                    <em>6天8时58分7秒</em>
+                  </p>
+                  <span class="buy">立即购买</span>
+                </div>
+              </li>
+              <li>
+                <div class="content">
+                  <p class="zj">
+                    直降
+                    <em>49.50Q币</em>
+                  </p>
+                  <a href="" class="detail">
+                    <img src="https://game.gtimg.cn/images/daoju/app/lol/medium/2-236008-9.jpg?_t=1535946297" alt="">
+                  </a>
+                  <p class="name">
+                    西部魔影 卢锡安
+                  </p>
+                  <div class="price">
+                    <h4>49.50</h4>元<span>（
+                      <h5>99QB</h5>）
+                    </span>
+                  </div>
+                  <p class="time">
+                    剩余时间：
+                    <em>6天8时58分7秒</em>
+                  </p>
+                  <span class="buy">立即购买</span>
+                </div>
+              </li>
             </ul>
           </div>
         </div>
@@ -234,7 +306,7 @@
             </div>
             <div class="left_content">
               <div class="box_type1">
-                <dl>
+                <!-- <dl>
                   <dt>
                     <img src="https://game.gtimg.cn/images/daoju/app/lol/medium/pkg-25971.jpg?_t=1611139580" alt="">
                   </dt>
@@ -251,7 +323,7 @@
                   <br>
                   <a href="" class="btn">立即购买</a>
                   </dd>
-                </dl> 
+                </dl>  -->
               </div>
             </div>
           </div>
@@ -264,7 +336,7 @@
                 </div>
               </div>
               <ul class="box_type2">
-                <li>
+                <!-- <li>
                   <div class="listnum">01</div>
                   <img src="https://game.gtimg.cn/images/daoju/dbm/lol/20170216_28862_2202.jpg" alt="">
                   <div class="content">
@@ -278,7 +350,7 @@
                       微信价： <p>￥</p> <span>76.63</span>
                     </div>
                   </div>
-                </li>
+                </li> -->
               </ul>
             </div>
             <!-- 猜你喜欢 -->
@@ -329,7 +401,7 @@
                 </p>
               </dd>
             </dl>
-
+            
           </div>
         </div>
         <!-- 精彩活动 -->
@@ -347,6 +419,32 @@
                 <div class="tips">
                   <div class="act_name">
                     福牛守护者
+                  </div>
+                  <p>活动时间：2021-02-05-2022-02-05</p>
+                  <div class="attention">
+                    <span class="like"></span><span class="num"><p>13035</p>
+                    </span>
+                  </div>
+                </div>
+              </li>
+              <li>
+                <img src="https://game.gtimg.cn/upload/webplat/info/dj/20210129/14315207772224.jpg" alt="">
+                <div class="tips">
+                  <div class="act_name">
+                    山海绘卷
+                  </div>
+                  <p>活动时间：2021-02-05-2022-02-05</p>
+                  <div class="attention">
+                    <span class="like"></span><span class="num"><p>13035</p>
+                    </span>
+                  </div>
+                </div>
+              </li>
+              <li>
+                <img src="https://game.gtimg.cn/upload/webplat/info/dj/20210122/40485232329971.jpg" alt="">
+                <div class="tips">
+                  <div class="act_name">
+                    破败军团
                   </div>
                   <p>活动时间：2021-02-05-2022-02-05</p>
                   <div class="attention">
@@ -432,7 +530,6 @@
     </div>
   </div>
   
-
-<script src="./script/index.js"></script>
+<script src="./script/index.js" type="module"></script>
 </body>
 </html>
