--- a/gulp-cli/views/shoplist.html
+++ b/gulp-cli/views/shoplist.html
@@ -22,7 +22,7 @@
                     </ul>
                 </div>
                 <div class="right">
-                    <p>您还未登录，请<span>登录</span></p>
+                    <p>您还未登录，请<span class="log">登录</span></p>
                     <ul>
                         <li>我的订单</li>
                         <li>个人中心</li>
@@ -52,10 +52,10 @@
                     <div class="left">
                         <ul>
                             <li>
-                                <a href="">首页</a>
+                                <a href="./index.html">首页</a>
                             </li>
                             <li class="choose">
-                                <a href="">商品列表</a>
+                                <a href="./shoplist.html">商品列表</a>
                             </li>
                             <li>
                                 <a href="">活动专区</a>
@@ -76,14 +76,14 @@
                     </div>
                     <div class="right">
                         <p></p>
-                        <div>购物车（<span>0</span>）</div>
+                        <div><a href="./shoppingcar.html" style="color: #ff5900;">购物车</a>（<span>0</span>）</div>
                     </div>
                 </div>
                 <!-- 子导航栏 -->
                 <div class="top_4">
                     <ul>
                         <li class="no_1">
-                            <a href="">全部分类</a>
+                            <a href="./shoplist.html">全部分类</a>
                         </li>
                         <li>
                             <a href="">英雄</a>
@@ -490,6 +490,7 @@
             <a href="">反馈</a>
         </div>
     </div>
+    <script src="./script/shoplist.js" type="module"></script>
 </body>
 
 </html>
