--- a/gulp-cli/style/index.scss
+++ b/gulp-cli/style/index.scss
@@ -3,7 +3,7 @@
 @import './box_type.scss';
 @import './topic_type.scss';
 @import './foot.scss';
-
+@import './login_box.scss';
 body{
  overflow: auto;
 }
@@ -54,8 +54,9 @@ body{
         font-size: 12px;
         color: #555;
         padding-top: 25px;
-        a{
+        span{
           color: #1c8bde;
+          cursor: pointer;
         }
       }
 
@@ -203,6 +204,10 @@ body{
           cursor: pointer;
         }
         li:hover{
+          background-color: #36ab87;
+          color: #fff;
+        }
+        .show{
           background-color: #36ab87;
           color: #fff;
         }
