--- a/gulp-cli/style/shoppingcar.scss
+++ b/gulp-cli/style/shoppingcar.scss
@@ -2,6 +2,7 @@
 @import './header.scss';
 @import './topic_type.scss';
 @import './foot.scss';
+@import './login_box.scss';
 body{
     overflow: auto;
    }
@@ -43,6 +44,308 @@ body{
         .location{
             a{
                 color: #3a3f4a;
+            }
+        }
+    }
+
+    #shopcar{
+        width: 1190px;
+        height: auto;
+        margin: 0 auto;
+        background: #fafbfc;
+        overflow: hidden;
+        color: #2e2e2e;
+        .payman{
+            margin-left: 22px;
+            h3{
+                margin-bottom: 14px;
+                width: 1146px;
+                font-size: 14px;
+                color: #222;
+                height: 22px;
+                border-bottom: 1px solid #ddd;
+                text-indent: 2px;
+                padding-top: 18px;
+            }
+            .content{
+                margin-top: 24px;
+                .group{
+                    padding-bottom: 10px;
+                    span{
+                        width: auto;
+                        margin-left: 2px;
+                        display: block;
+                        float: left;
+                        text-align: right;
+                        padding-top: 8px;
+                    }
+                    select{
+                        outline: none;
+                    }
+                    #iZone{
+                        margin-right: 10px;
+                        height: 30px;
+                        line-height: 30px;
+                        padding: 4px 6px;
+                        width: 175px;
+                        border: 1px solid #ccc;
+                        vertical-align: middle;
+                    }
+                    #role{
+                        margin-right: 10px;
+                        height: 30px;
+                        line-height: 30px;
+                        padding: 4px 6px;
+                        width: 175px;
+                        border: 1px solid #ccc;
+                        vertical-align: middle;
+                    }
+                }
+            }
+        }
+        .carlist{
+            padding-top: 15px;
+            width: 1143px;
+            margin-left: 22px;
+            margin-top: 10px;
+            h2{
+                margin-bottom: 14px;
+                width: 1146px;
+                font-size: 14px;
+                color: #222;
+                height: 22px;
+                border-bottom: 1px solid #ddd;
+                text-indent: 2px;
+            }
+            .table_box{
+                padding: 0 16px;
+                background: #f3f4f6;
+                .table_con{
+                    width: 100%;
+                    font-size: 14px;
+                    .head{
+                        line-height: 40px;
+                        border-bottom: 1px dotted #DEDFDE;
+                        font-weight: normal;
+                        font-size: 14px;
+                        color: #222;
+                        span{
+                            margin-left: 60px;
+                        }
+                        span:nth-of-type(1){
+                            margin-left: 30px;
+                        }
+                        span:nth-of-type(2){
+                            margin-left: 120px;
+                        }
+                        span:nth-of-type(3){
+                            margin-left: 120px;
+                        }
+                        span:nth-of-type(6){
+                            margin-left: 90px;
+                        }
+                        span:nth-of-type(7){
+                            margin-left: 90px;
+                        }
+                    }
+                    .list{
+                        overflow: hidden;
+                        border-bottom: 1px dotted #DEDFDE;
+                        font-weight: normal;
+                        font-size: 14px;
+                        color: #222;
+                        // background: #fffeee;
+                        li{
+                            overflow: hidden;
+                            line-height: 50px;
+                            margin-left: 20px;
+                            overflow: hidden;
+                            position: relative;
+                            input{
+                                float: left;
+                                margin-top: 18px;
+                                margin-left: 20px;
+                            }
+                            img{
+                                margin-top: 10px;
+                                float: left;
+                                margin-left: 60px;
+                                vertical-align: middle;
+                                margin-right: 10px;
+                                width: 39px;
+                                height: 28px;
+                            }
+                            p{
+                                float: left;
+                            }
+                            i{
+                                float: left;
+                                width: 40px;
+                                margin-left: 15px;
+                            }
+                            span{
+                                float: left;
+                            }
+                            .name{
+                                width: 200px;
+                                overflow: hidden;
+
+                            }
+                            .pifu{
+                                width: 40px;
+                                margin-left: 20px;
+                            }
+                            .danjia{
+                                width: 100px;
+                                margin-left: 30px;
+                            }
+                            .del{
+                                margin-right: 10px;
+                                margin-left: 50px;
+                                border: 1px solid #ccc;
+                                width: 20px;
+                                text-align: center;
+                                line-height: 20px;
+                                margin-top: 12px;
+                                background-color: white;
+                                cursor: pointer;
+                            }
+                            .num{
+                                width: 20px;
+                                text-align: center;
+                            }
+                            .add{
+                                margin-right: 53px;
+                                margin-left: 10px;
+                                border: 1px solid #ccc;
+                                width: 20px;
+                                text-align: center;
+                                line-height: 20px;
+                                margin-top: 12px;
+                                background-color: white;
+                                cursor: pointer;
+                            }
+                            .zk{
+                                width: 60px;
+                            }
+                            .xiaoji{
+                                width: 90px;
+                                margin-left: 40px;
+                                margin-right: 10px;
+                            }
+                            span{
+                                width: 40px;
+                                color: #1c8bde;  
+                                cursor: pointer;
+                            }
+                        }
+                        li:hover{
+                            background: #fffeee;
+                        }
+                    }
+                }
+            }
+        }
+        .benefit{
+            margin-top: 16px;
+            padding-bottom: 22px;
+            margin-left: 22px;
+            h2{
+                margin-bottom: 14px;
+                width: 1146px;
+                font-size: 14px;
+                color: #222;
+                height: 22px;
+                border-bottom: 1px solid #ddd;
+                text-indent: 2px;
+            }
+            .discount{
+                padding: 9px 9px;
+                line-height: 21px;
+                span{
+                    line-height: 21px; 
+                    .num{
+                        color: #de1407;
+                        padding: 0 10px 0 3px;
+                    }
+                }
+                a{
+                    color: #1c8bde;
+                }
+            }
+        }
+        .total{
+            margin: 20px 18px 50px 0;
+            background: #fffeee;
+            border: 1px solid #ddd;
+            height: 56px;
+            line-height: 56px;
+            display: block;
+            padding: 0 170px 0 32px;
+            color: #222;
+            font-size: 14px;
+            text-align: right;
+            position: relative;
+            overflow: hidden;
+            margin-left: 20px;
+            .xq{
+                float: left;
+                span{
+                    color: red;
+                    font-weight: bold;
+                    font-size: 12px;
+                    text-align: left;
+                }
+            }
+            .zj{
+                float: right;
+                p{
+                    display: inline-block;
+                    font-size: 24px;
+                    padding: 0 5px;
+                    color: #f74a4a;
+                    font-weight: 600;
+                }
+            }
+            .sub{
+                display: block;
+                position: absolute;
+                right: 0;
+                top: -1px;
+                z-index: 10;
+                width: 146px;
+                height: 57px;
+                text-align: center;
+                line-height: 57px;
+                background: #666;
+                color: #fff;
+                font-size: 18px;
+                font-weight: bold;
+            }
+            .sub:hover{
+                background: #f74a4a;
+            }
+        }
+        .attention{
+            padding-bottom: 22px;
+            height: auto;
+            margin-left: 22px;
+            h3{
+                margin-bottom: 14px;
+                width: 1146px;
+                font-size: 14px;
+                color: #222;
+                height: 22px;
+                border-bottom: 1px solid #ddd;
+                text-indent: 2px;
+                text-align: left;
+            }
+            ol{
+                li{
+                    font-size: 14px;
+                    color: #60605f;
+                    line-height: 26px;
+                }
             }
         }
     }
