--- a/gulp-cli/style/detail.scss
+++ b/gulp-cli/style/detail.scss
@@ -118,6 +118,10 @@ body{
                         cursor: pointer;
                         position: absolute;
                     }
+                    // .bigImg{
+                    //     position: fixed;
+                    //     left: 50%;
+                    // }
                 }
                 .goods_box{
                     width: auto;
