--- a/gulp-cli/views/index.html
+++ b/gulp-cli/views/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>英雄联盟道聚城首页</title>
-<!-- <link rel="icon" href="./image/QQfavicon.png" type="image/x-icon"> -->
+<link rel="icon" href="./image/daoju_icon.jpg" type="image/x-icon">
 <link rel="stylesheet" href="./style/clear.css">
 <link rel="stylesheet" href="./style/index.css">
 </head>
