--- a/gulp-cli/views/shoppingcar.html
+++ b/gulp-cli/views/shoppingcar.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>商品列表</title>
+    <link rel="icon" href="./image/daoju_icon.jpg" type="image/x-icon">
     <link rel="stylesheet" href="./style/clear.css">
     <link rel="stylesheet" href="./style/shoppingcar.css">
 </head>
@@ -143,7 +144,7 @@
         <h2>商品信息</h2>
         <div class="table_box">
           <div class="table_con">
-            <!-- <div class="head">
+            <div class="head">
               <span><input type="checkbox">&nbsp;&nbsp;全选</span>
               <span>商品名称</span>
               <span>类型</span>
@@ -155,7 +156,7 @@
               <span>操作</span>
             </div>
             <ul class="list">
-              <li>
+              <!-- <li>
                 <input type="checkbox">
                 <img src="http://ossweb-img.qq.com/images/daoju/app/lol/rectangle/2-22017-.jpg?_t=1570688942" alt="">
                 <p class="name">西部天使 艾希</p>
@@ -168,8 +169,8 @@
                 <p class="zk">限时折扣</p>
                 <p class="xiaoji">49.50 Q币</p>
                 <span>删除</span>
-              </li>
-            </ul> -->
+              </li> -->
+            </ul>
           </div>
         </div>
       </div>
