--- a/gulp-cli/views/shoplist.html
+++ b/gulp-cli/views/shoplist.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>商品列表</title>
+    <link rel="icon" href="./image/daoju_icon.jpg" type="image/x-icon">
     <link rel="stylesheet" href="./style/clear.css">
     <link rel="stylesheet" href="./style/shoplist.css">
 </head>
